--- a/src/Pages/Approve/Approve.css
+++ b/src/Pages/Approve/Approve.css
@@ -153,7 +153,7 @@
 .popup-container-info {
     max-width: 1000px; /* ขนาดกรอบสีส้มเล็กลง */
     width: 100%;
-    background-color: #000000; /* พื้นหลังสีส้ม */
+    background-color: #ffa500; /* พื้นหลังสีส้ม */
     border-radius: 1rem;
     /* padding-right: 1rem; */
     padding: 1rem; /* ระยะห่างขอบด้านใน */
